# the-c-programming-language-2nd

./: CMakeLists.txt  a.out  temperature.c
chapter1/: char_exercise.c  copy.c  count.c  lines.c
chapter1/examples/: 1.10_external_variables.c  1.2_temperature.c  1.3_temperature_for.c  1.4_temperature_define.c  1.5.1_copy.c  1.5.2_count.c  1.5.3_lines.c  1.5.4_words.c  1.6_arrays.c  1.7_power.c  1.8_call_by_value.c  1.9_longest_line.c
chapter1/exercises/: 1-01.c  1-02.c  1-03.c  1-04.c  1-05.c  1-06.c  1-07.c  1-08.c  1-09.c  1-10.c  1-11.c  1-12.c  1-13-2.c  1-13.c  1-14.c  1-15.c  1-16.c  1-17.c  1-18.c  1-19.c  1-20.c  1-21.c
